2006-03-06 [colin]	2.0.0cvs115

	* src/imap.c
		Prevent double-timeouts when connection fails

2006-03-06 [colin]

	2.0.1-rc1 released

2006-03-06 [colin]	2.0.0cvs114

	* src/imap.c
		Refresh session during potentially long
		operations

2006-03-06 [wwp]	2.0.0cvs113

	* src/prefs_msg_colors.h
		forgot that one (custom color labels).

2006-03-06 [wwp]	2.0.0cvs112

	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_msg_colors.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/colorlabel.c
	* src/gtk/colorlabel.h
		colors in messages list are now customizable. Color values and names can
		be changed in "Configuration/Preferences/Display/Colors/Color labels".
		Thanks to Paul and Colin for their help with this longstanding patch!

2006-03-06 [wwp]	2.0.0cvs111

	* src/textview.c
		don't crash if (x)face is bad.

2006-03-05 [paul]	2.0.0cvs110

	* AUTHORS
	* configure.ac
	* src/Makefile.am
	* src/common/Makefile.am
	* src/common/utils.h
	* src/etpan/imap-thread.c
	* src/gtk/authors.h
	* src/plugins/clamav/Makefile.am
	* src/plugins/demo/Makefile.am
	* src/plugins/dillo_viewer/Makefile.am
	* src/plugins/pgpcore/Makefile.am
	* src/plugins/pgpcore/passphrase.c
	* src/plugins/pgpinline/Makefile.am
	* src/plugins/pgpmime/Makefile.am
	* src/plugins/spamassassin/Makefile.am
	* src/plugins/trayicon/Makefile.am
		fix builiding on cygwin
		Patch by Ralgh Young <bamanzi@gmail.com>

2006-03-04 [wwp]	2.0.0cvs109

	* manual/keyboard.xml
		fix mixed up/down keys.

2006-03-04 [wwp]	2.0.0cvs108

	* README
	* INSTALL
		updated links to SpamAssassin.

2006-03-04 [wwp]	2.0.0cvs107

	* manual/plugins.xml
	* src/plugins/spamassassin/README
		updated SpamAssassin plugin docs to reflect new functional additions
		(also fix/update/documents few technical stuff more, see the README).

2006-03-04 [wwp]	2.0.0cvs106

	* src/prefs_message.c
		normalized capitalization of message-prefs paths.

2006-03-04 [wwp]	2.0.0cvs105

	* manual/advanced.xml
		typo.

2006-03-03 [colin]	2.0.0cvs104
